--- a/ow_styles.css
+++ b/ow_styles.css
@@ -20,8 +20,17 @@ header {
 
 
 /* Navigation Styles */
-
-
+nav {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    text-align: center;
+}
+nav > ul {
+    list-style-type: none;
+}
+nav a {
+    text-decoration: none;
+}
 
 
 /* List Styles */
