--- a/ow_styles.css
+++ b/ow_styles.css
@@ -4,11 +4,16 @@ header {
     font-size: 50px;
     text-align: center;
 }
+
 body {
     padding: 10px 30px;
     border: 10px 40px;
     margin: 20px 80px;
-    background-color: rgb(43, 122, 45);
+}
+
+html {
+    background-color: yellow;
+
 }
 
 /* Heading Styles */
@@ -36,35 +41,42 @@ nav {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     text-align: center;
-    background-color: lemonchiffon;
+    background-color: white;
 }
-nav > ul {
+
+nav>ul {
     list-style-type: none;
 }
+
 nav a {
     text-decoration: none;
 }
+
 nav a:link,
 nav a:visited {
     text-decoration: none;
     color: black;
 }
+
 nav a:hover,
 nav a:active {
     color: rgb(3, 21, 184);
 }
-header > nav {
-	display: table;
-	width: 100%;
+
+header>nav {
+    display: table;
+    width: 100%;
 }
-header > nav > ul {
-	display: table-row;
+
+header>nav>ul {
+    display: table-row;
     list-style-type: none;
     text-align: center;
 }
-header > nav > ul > li {
-	display: table-cell;
-	text-align: center;
+
+header>nav>ul>li {
+    display: table-cell;
+    text-align: center;
 }
 
 /* Outline Styles */
@@ -78,6 +90,7 @@ header > nav > ul > li {
     box-align: left;
     text-align: left;
 }
+
 .rightcol {
     padding: 10px;
     box-align: right;
