--- a/ow_styles.css
+++ b/ow_styles.css
@@ -20,7 +20,18 @@ body>ol>p {
     font-size: 18px;
 }
 
-body>p {}
+body>p {
+    
+}
+
+article>h1 {
+    text-align: center;
+    font-size: 27px;
+}
+
+article>p {
+    font-size: 18px;
+}
 
 h2 {
     font-size: 25px;
